skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_paused.snap
---
source: tests/snapshot_overview.rs
expression: "render_fixture(\"paused\")"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-paused  ·  Supervisor pi at /repo/demo  ·  state: live file  ·  uptime 3h10m  ·  Adhoc 0 · Issues 1 · Tasks 0  ·  2m old  $0.00 · 0 turns · in 0 / out 0            moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" PAUSED FOR USER · VST-202 · scope-creep-detected · Actual files exceed declared scope. Continue, descope, or abort?                                                                                    "
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ summary ─────────────────┐┌ tracked work (1 items) ──────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ selected work ───────────────────────────┐"
"│Status                    ││Type    State            Harness    Title          Cost           PR / path      Age      Decision                Activity    ││Resolve scope creep                       │"
"│▸ Needs input        1    ││Issue   Needs input      pi         Resolve scope… —              …#88 · vst-202 2h05m    scope-creep-detected    2m          ││VST-202  ·  Issue  ·  Needs input         │"
"│                          ││                                                                                                                              ││substate: paused for user                 │"
"│Merge queue               ││                                                                                                                              ││                                          │"
"│1. VST-202  Needs input   ││                                                                                                                              ││Where                                     │"
"│                          ││                                                                                                                              ││tmux tab Resolve scope creep              │"
"│Conflicts                 ││                                                                                                                              ││worktree                                  │"
"│• VST-202 ↔ VST-203       ││                                                                                                                              ││/repo/worktrees/vst-202                   │"
"│                          ││                                                                                                                              ││cwd     /repo/worktrees/vst-202           │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Issue                                     │"
"│                          ││                                                                                                                              ││id      VST-202                           │"
"│                          ││                                                                                                                              ││PR #88                                    │"
"│                          ││                                                                                                                              ││scope declared=3 actual=12 (4.0x bigger   │"
"│                          ││                                                                                                                              ││than declared)                            │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Paused                                    │"
"│                          ││                                                                                                                              ││reason: scope-creep-detected              │"
"│                          ││                                                                                                                              ││prompt: Actual files exceed declared      │"
"│                          ││                                                                                                                              ││scope. Continue, descope, or abort?       │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Cost                                      │"
"│                          ││                                                                                                                              ││cost      — (no source)                   │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent activity                           │"
"│                          ││                                                                                                                              ││no activity events yet                    │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent decisions                          │"
"│                          ││                                                                                                                              ││• scope-creep-detected → Escalated to user│"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Actions                                   │"
"│                          ││                                                                                                                              ││[ Focus tmux tab ]                        │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
